# cpuminer-multi

./: .gitmodules  CMakeLists.txt  Makefile.am  README.md  configure.ac  cpu-miner.c  cpuminer_lib.c  cpuminer_lib.h  cryptonight.c  external.c  fresh.c  main.c  miner.h  rrhash.c  util.c
compat/: CMakeLists.txt
compat/jansson/: CMakeLists.txt
rpc/: client_stub.c  mybind.c  rpc_types.h  rpcserver.c  server_stub.c
